--- a/studio-mixnorte/package.json
+++ b/studio-mixnorte/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/locale-pt-br": "^1.1.24",
     "@sanity/vision": "^4.10.3",
     "react": "^19.1",
     "react-dom": "^19.1",
